tests/ui/vis_private.rs
#[derive(partial_config::HasPartial)]
struct ConfigurationError {

}

fn main() {}
